--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME=TaskManagement
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:03wn9JC7fNEQMmQ8dnUkUa8ZJrj5IJ7Gci9gzZCLCYg=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -18,7 +18,7 @@ DB_PASSWORD=
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=redis
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
@@ -27,9 +27,10 @@ MEMCACHED_HOST=127.0.0.1
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
+REDIS_CLIENT=predis
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailpit
+MAIL_HOST=localhost
 MAIL_PORT=1025
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
